# invenio-github

./: .editorconfig  .env  .git-blame-ignore-revs  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  RELEASE-NOTES.rst  babel.ini  package-lock.json  pyproject.toml  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: i18n-push.yml  pypi-publish.yml  pypi-release.yml  tests.yml
.tx/: config
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  contributing.rst  index.rst  installation.rst  license.rst  make.bat  upgrading.rst  usage.rst
docs/contrib/: github.rst  gitlab.rst
examples/: app.py
invenio_github/: __init__.py  admin.py  api.py  badge.py  bundles.py  cli.py  config.py  debug.py  errors.py  ext.py  handlers.py  helpers.py  models.py  providers.py  proxies.py  receivers.py  service.py  tasks.py  upload.py  utils.py  version.py  webpack.py
invenio_github/alembic/: 2f62e6442a08_change_datetime_types.py  5a5428312b2b_create_github_branch.py  b0eaee37b545_create_github_tables.py
invenio_github/assets/js/github/: app.js  view.js
invenio_github/assets/scss/github/: github.scss
invenio_github/assets/semantic-ui/js/invenio_github/: index.js  init.js
invenio_github/assets/semantic_ui/js/invenio_github/: view.js
invenio_github/contrib/: github.py
invenio_github/oauth/: handlers.py  remote_app.py
invenio_github/static/css/github/: github.css
invenio_github/static/js/github/: init.js  view.js
invenio_github/static/scss/github/: github.scss
invenio_github/templates/invenio_github/: email_zenodo_json.html  faq.html  faq_base.html  helpers.html  index.html  index_base.html
invenio_github/templates/invenio_github/settings/: _macros.html  base.html  faq.html  helpers.html  index.html  index_item.html  view.html
invenio_github/templates/semantic-ui/invenio_github/: helpers.html
invenio_github/templates/semantic-ui/invenio_github/settings/: base.html  helpers.html  index.html  index_item.html  view.html
invenio_github/templates/semantic_ui/invenio_github/settings/: base.html  helpers.html
invenio_github/translations/: messages.pot
invenio_github/translations/ar/LC_MESSAGES/: messages.po
invenio_github/translations/bg/LC_MESSAGES/: messages.po
invenio_github/translations/ca/LC_MESSAGES/: messages.po
invenio_github/translations/cs/LC_MESSAGES/: messages.po
invenio_github/translations/da/LC_MESSAGES/: messages.po
invenio_github/translations/de/LC_MESSAGES/: messages.po
invenio_github/translations/el/LC_MESSAGES/: messages.po
invenio_github/translations/en/LC_MESSAGES/: messages.po
invenio_github/translations/es/LC_MESSAGES/: messages.po
invenio_github/translations/et/LC_MESSAGES/: messages.po
invenio_github/translations/fa/LC_MESSAGES/: messages.po
invenio_github/translations/fr/LC_MESSAGES/: messages.po
invenio_github/translations/hr/LC_MESSAGES/: messages.po
invenio_github/translations/hu/LC_MESSAGES/: messages.po
invenio_github/translations/it/LC_MESSAGES/: messages.po
invenio_github/translations/ja/LC_MESSAGES/: messages.po
invenio_github/translations/ka/LC_MESSAGES/: messages.po
invenio_github/translations/ko/LC_MESSAGES/: messages.po
invenio_github/translations/lt/LC_MESSAGES/: messages.po
invenio_github/translations/no/LC_MESSAGES/: messages.po
invenio_github/translations/pl/LC_MESSAGES/: messages.po
invenio_github/translations/pt/LC_MESSAGES/: messages.po
invenio_github/translations/ro/LC_MESSAGES/: messages.po
invenio_github/translations/ru/LC_MESSAGES/: messages.po
invenio_github/translations/sk/LC_MESSAGES/: messages.po
invenio_github/translations/sv/LC_MESSAGES/: messages.po
invenio_github/translations/tr/LC_MESSAGES/: messages.po
invenio_github/translations/uk/LC_MESSAGES/: messages.po
invenio_github/translations/zh_CN/LC_MESSAGES/: messages.po
invenio_github/translations/zh_TW/LC_MESSAGES/: messages.po
invenio_github/views/: __init__.py  badge.py  github.py  handlers.py  vcs.py
invenio_vcs/: __init__.py  api.py  config.py  errors.py  ext.py  generic_models.py  models.py  providers.py  proxies.py  receivers.py  service.py  tasks.py  utils.py  webpack.py
invenio_vcs/alembic/: 1754318294_switch_to_generic_git_services.py
invenio_vcs/assets/semantic-ui/js/invenio_vcs/: index.js
invenio_vcs/contrib/: github.py  gitlab.py
invenio_vcs/notifications/: __init__.py  generators.py
invenio_vcs/oauth/: handlers.py  remote_app.py
invenio_vcs/templates/semantic-ui/invenio_github/settings/: index.html  index_item.html
invenio_vcs/templates/semantic-ui/invenio_vcs/: base.html  helpers.html
invenio_vcs/templates/semantic-ui/invenio_vcs/settings/: helpers.html  index.html  index_item.html  release_item.html  view.html
invenio_vcs/translations/: messages.pot
invenio_vcs/translations/da/LC_MESSAGES/: messages.po
invenio_vcs/translations/en/LC_MESSAGES/: messages.po
invenio_vcs/translations/fr/LC_MESSAGES/: messages.po
invenio_vcs/upgrade_scripts/: __init__.py  migrate_3_0_to_4_0.py
invenio_vcs/views/: badge.py  vcs.py
tests/: __init__.py  conftest.py  fixtures.py  helpers.py  test_alembic.py  test_api.py  test_authentication.py  test_badge.py  test_cli.py  test_invenio_github.py  test_invenio_vcs.py  test_models.py  test_provider.py  test_service.py  test_tasks.py  test_upload.py  test_views.py  test_webhook.py
tests/contrib_fixtures/: github.py  gitlab.py  patcher.py
