# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2023 CERN.
# Copyright (C) 2023 Graz University of Technology.
#
# Invenio is free software; you can redistribute it
# and/or modify it under the terms of the GNU General Public License as
# published by the Free Software Foundation; either version 2 of the
# License, or (at your option) any later version.
#
# Invenio is distributed in the hope that it will be
# useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Invenio; if not, write to the
# Free Software Foundation, Inc., 59 Temple Place, Suite 330, Boston,
# MA 02111-1307, USA.
#
# In applying this license, CERN does not
# waive the privileges and immunities granted to it by virtue of its status
# as an Intergovernmental Organization or submit itself to any jurisdiction.

[metadata]
name = invenio-github
version = attr: invenio_github.__version__
description = "Invenio module that adds GitHub integration to the platform."
long_description = file: README.rst, CHANGES.rst
keywords = invenio github
license = GPLv2
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-github
classifiers =
    Development Status :: 5 - Production/Stable

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >= 3.7
install_requires =
    invenio-i18n>=2.0.0
    Flask-Breadcrumbs>=0.4.0
    Flask-Menu>=0.5.0
    Flask>=1.0.4
    email-validator>=1.0.5
    github3.py>=4.0.1,<5.0.0
    humanize>=0.5.1
    invenio-assets>=2.0.0
    invenio-accounts>=2.2.0
    invenio-celery>=1.2.5
    invenio-db>=1.1.2
    invenio-formatter>=1.0.1
    invenio-oauth2server>=2.0.0
    invenio-oauthclient>=2.3.0
    invenio-pidstore>=1.2.1,<2.0.0
    invenio-records-rest>=2.2.0
    invenio-rest>=1.2.4  # TODO needs a release. current: 1.2.8
    invenio-webhooks>=1.0.0a4  # TODO invenio webhooks need a release after being updated (major 2.0.0)
    invenio-records-resources>=4.2.0
    mistune>=0.7.2
    six>=1.12.0
    uritemplate.py>=0.2.0,<2.0
    Flask>=2.2.0,<2.3.0
    PyYAML>=5.4.1

[options.extras_require]
docs =
    Sphinx>=1.4.2
tests =
    mock>=2.0.0
    httpretty>=0.8.14
    pytest-black>=0.3.0
    invenio-files-rest>=1.0.0a12,<1.5.0
    isort>=4.2.2
    pytest-mock>=2.0.0
    pytest-invenio>=2.1.0,<3.0.0
    pluggy>=0.12,<1.0
    sphinx>=4.5.0
    invenio-app>=1.3.4
    invenio_vocabularies>=1.5.0
elasticsearch7 =
    invenio-search[elasticsearch7]>=2.1.0,<3.0.0
opensearch1 =
    invenio-search[opensearch1]>=2.1.0,<3.0.0
opensearch2 =
    invenio-search[opensearch2]>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.apps =
    invenio_github = invenio_github:InvenioGitHub
invenio_base.api_apps =
    invenio_github = invenio_github:InvenioGitHub
invenio_base.blueprints =
    invenio_github_badge = invenio_github.views.badge:blueprint
    invenio_github_github = invenio_github.views.github:blueprint
invenio_base.api_blueprints =
    invenio_github = invenio_github.views.github:blueprint_api
invenio_celery.tasks =
    invenio_github = invenio_github.tasks
invenio_db.models =
    invenio_github = invenio_github.models
invenio_i18n.translations =
    messages = invenio_github
invenio_webhooks.receivers =
    github = invenio_github.receivers:GitHubReceiver
invenio_admin.views =
    invenio_github_repository = invenio_github.admin:repository_adminview
    invenio_github_requests = invenio_github.admin:release_adminview
invenio_assets.bundles =
    invenio_github_js = invenio_github.bundles:js
    invenio_github_css = invenio_github.bundles:css
invenio_assets.webpack =
    invenio_github = invenio_github.webpack:theme

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[compile_catalog]
directory = invenio_github/translations/

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_github/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_github/translations/messages.pot
output-dir = invenio_github/translations/

[update_catalog]
input-file = invenio_github/translations/messages.pot
output-dir = invenio_github/translations/

[pydocstyle]
add_ignore = D401,D403

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --ignore=docs --cov=invenio_github --cov-report=term-missing
testpaths = tests invenio_github
