# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2023-2025 CERN.
# Copyright (C) 2023-2025 Graz University of Technology.
#
# Invenio is free software; you can redistribute it
# and/or modify it under the terms of the GNU General Public License as
# published by the Free Software Foundation; either version 2 of the
# License, or (at your option) any later version.
#
# Invenio is distributed in the hope that it will be
# useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Invenio; if not, write to the
# Free Software Foundation, Inc., 59 Temple Place, Suite 330, Boston,
# MA 02111-1307, USA.
#
# In applying this license, CERN does not
# waive the privileges and immunities granted to it by virtue of its status
# as an Intergovernmental Organization or submit itself to any jurisdiction.

[metadata]
name = invenio-vcs
version = attr: invenio_vcs.__version__
description = "Invenio module that adds GitHub integration to the platform."
long_description = file: README.rst, CHANGES.rst
keywords = invenio github gitlab vcs
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-vcs
classifiers =
    Development Status :: 5 - Production/Stable

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >= 3.7
install_requires =
    Flask-Menu>=2.0.0,<3.0.0
    PyYAML>=5.4.1
    email-validator>=1.0.5
    humanize>=0.5.1
    python-dateutil>=2.9.0,<3.0.0
    invenio-assets>=4.0.0,<5.0.0
    invenio-accounts>=6.0.0,<7.0.0
    invenio-celery>=2.0.0,<3.0.0
    invenio-db[postgresql,mysql]>=2.0.0,<3.0.0
    invenio-formatter>=3.0.0,<4.0.0
    invenio-i18n>=3.0.0,<4.0.0
    invenio-oauth2server>=3.0.0,<4.0.0
    invenio-oauthclient>=6.0.0,<7.0.0
    invenio-pidstore>=2.0.0,<3.0.0
    invenio-records-rest>=3.0.0,<4.0.0
    invenio-webhooks>=1.0.0,<2.0.0
    invenio-records-resources>=8.0.0,<9.0.0
    mistune>=0.7.2
    six>=1.12.0
    uritemplate>=3.0.1

[options.extras_require]
tests =
    httpretty>=0.8.14
    invenio-app>=2.0.0,<3.0.0
    invenio-db[postgresql,mysql]>=2.0.0,<3.0.0
    invenio-files-rest>=3.0.0,<4.0.0
    isort>=4.2.2
    mock>=2.0.0
    pytest-black-ng>=0.4.0
    pytest-invenio>=3.0.0,<4.0.0
    pytest-mock>=2.0.0
    sphinx>=4.5.0
elasticsearch7 =
    invenio-search[elasticsearch7]>=3.0.0,<4.0.0
opensearch1 =
    invenio-search[opensearch1]>=3.0.0,<4.0.0
opensearch2 =
    invenio-search[opensearch2]>=3.0.0,<4.0.0
github =
    github3.py>=4.0.1,<5.0.0
gitlab =
    python-gitlab>=6.2.0,<7.0.0

[options.entry_points]
invenio_base.apps =
    invenio_vcs = invenio_vcs:InvenioVCS
invenio_base.api_apps =
    invenio_vcs = invenio_vcs:InvenioVCS
invenio_base.blueprints =
    invenio_vcs_badge = invenio_vcs.views.badge:blueprint
    invenio_vcs_vcs = invenio_vcs.views.vcs:create_ui_blueprint
invenio_base.api_blueprints =
    invenio_vcs = invenio_vcs.views.vcs:create_api_blueprint
invenio_base.finalize_app =
    invenio_vcs = invenio_vcs.ext:finalize_app_ui
invenio_base.api_finalize_app =
    invenio_vcs = invenio_vcs.ext:finalize_app_api
invenio_celery.tasks =
    invenio_vcs = invenio_vcs.tasks
invenio_db.alembic =
    invenio_vcs = invenio_vcs:alembic
invenio_db.models =
    invenio_vcs = invenio_vcs.models
invenio_i18n.translations =
    messages = invenio_vcs
invenio_assets.webpack =
    invenio_vcs = invenio_vcs.webpack:theme

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[compile_catalog]
directory = invenio_vcs/translations/
use_fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping_file = babel.ini
output_file = invenio_vcs/translations/messages.pot
add_comments = NOTE

[init_catalog]
input_file = invenio_vcs/translations/messages.pot
output_dir = invenio_vcs/translations/

[update_catalog]
input_file = invenio_vcs/translations/messages.pot
output_dir = invenio_vcs/translations/

[pydocstyle]
add_ignore = D401,D403

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --ignore=docs --cov=invenio_vcs --cov-report=term-missing
testpaths = tests invenio_vcs
